--- a/1hw/assets/css/style.css
+++ b/1hw/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Site-wide Settings */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +9,16 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* Header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,6 +35,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/* Navigation Bar */
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -41,15 +53,7 @@ nav ul li {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/* Background Image*/
 figure {
     height: 800px;
     width: 100%;
@@ -58,7 +62,7 @@ figure {
     background-size: cover;
     background-position: center;
 }
-
+/*Main Content Images*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,6 +73,7 @@ figure {
     margin-left: 25px;
 }
 
+/*Main Content*/
 main {
     width: 75%;
     display: inline-block;
@@ -94,6 +99,7 @@ main {
     font-size: 36px;
 }
 
+/*Sidebar Content*/
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -121,6 +127,7 @@ aside {
     max-width: 150px;
 }
 
+/*Footer*/
 footer {
     padding: 30px;
     clear: both;
