--- a/2hw/style.css
+++ b/2hw/style.css
@@ -5,12 +5,19 @@ body {
 
 .navbar {
     margin-bottom: 20px;
+    padding-bottom: 5px;
 }
 .navbar-header h1 {
     color: white;
 
 }
 .panel{
-    padding-top: 50px;
+    padding-top: 55px;
+    max-width: 600px;
+}
+
+article{
+    float: left;
+    max-width: 500px;
 }
 
