--- a/2hw/style.css
+++ b/2hw/style.css
@@ -13,11 +13,15 @@ body {
 }
 .panel{
     padding-top: 55px;
-    max-width: 600px;
+    max-width: 1000px;
 }
 
 article{
-    float: left;
     max-width: 500px;
+}
+
+#purple{
+    float: right;
+    max-width: 300px;
 }
 
