navbar recolored and works

--- a/2hw/style.css
+++ b/2hw/style.css
@@ -1,28 +1,44 @@
-/*These colors might be off: I'm red/green colorblind, not extremely but badly enough I routinely misread shades.
+/*These colors might be off: I'm red/green colorblind, not extremely but badly enough I routinely misread shades of all colors.
 I pulled these colors from my desktop background, which has a palette I really like, but I don't have anyone
 around right now to tell me if I've misinterpretted them or how they're rendered through the color values below.
-I just wanted to tell you in case something, maybe, clashes horribly.*/
+I just wanted to tell you in case something, maybe, doesn't make sense or clashes horribly.*/
+
+/*Style for Navbar*/
+.navbar{
+    background: #849ac0;
+}
+
+.nav-link{
+    color: black;
+}
+.nav-link:hover{
+    color:whitesmoke;
+}
 
 /*Page Background*/
 body{
     padding-top: 65px;
     background-color: #e5e5ed;
 }
+
 /*Universal style for page bodies*/
 main{
     margin-top: 30px;
     max-width: 700px;
     background-color: ghostwhite;
 }
+
 /*Style for page headers*/
 .head{
     border-bottom-style: solid;
     border-width: thin;
     background-color: #afbee1;
 }
+
 .head h2{
     vertical-align: middle;
 }
+
 /*Style for the About Me card, distinct from Portfolio cards*/
 #bio{
     
@@ -45,6 +61,7 @@ main{
     text-decoration: underline;
     color: black;
 }
+
 .card-footer{
     background-color: #d3e4fb;
 }
