--- a/2hw/style.css
+++ b/2hw/style.css
@@ -8,13 +8,6 @@ I just wanted to tell you in case something, maybe, doesn't make sense or clashe
     background: #849ac0;
 }
 
-.nav-link{
-    color: black;
-}
-.nav-link:hover{
-    color:whitesmoke;
-}
-
 /*Page Background*/
 body{
     padding-top: 65px;
@@ -65,3 +58,10 @@ main{
 .card-footer{
     background-color: #d3e4fb;
 }
+
+/*Reduces padding between body/navbar for cleaner design on mobile*/
+@media only screen and (max-width: 600px) {
+    body {
+      padding-top: 40px;
+    }
+  }
