--- a/3hw/style.css
+++ b/3hw/style.css
@@ -1,3 +1,14 @@
 .card-body{
     border-style: dashed;
 }
+@media only screen and (max-width: 750px){
+   .jumbotron{
+       height: 160px;
+       margin-bottom: 0px;
+       padding-top: 10px;
+       padding-bottom: 0px;
+   } 
+   .jumbotron h1{
+       margin-bottom: 0px;
+   }
+}
