reached desired formatting-placed card in container-lg to center/control width, applied custom class in css to remove margins, allowing edge to edge on small screens. Credit for inspiration in readme.

--- a/3hw/style.css
+++ b/3hw/style.css
@@ -1,6 +1,8 @@
 /*Styling for generator box*/
-.card{
-    max-width: 900px;
+.full-width{
+    padding-left: 0px;
+    padding-right: 0px;
+    
 }
 .card-body{
     border-style: dashed;
