cleaning up card text/button formatting

--- a/3hw/style.css
+++ b/3hw/style.css
@@ -4,7 +4,7 @@
     padding-right: 0px;
     
 }
-.card-body{
+.card-text{
     border-style: dashed;
 }
 /*Reduces jumbotron size, removes bottom margin on phone screens*/
