--- a/3hw/style.css
+++ b/3hw/style.css
@@ -6,6 +6,10 @@
 }
 .card-body{
     border-style: dashed;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 /*Reduces jumbotron size, removes bottom margin on phone screens*/
