--- a/3hw/style.css
+++ b/3hw/style.css
@@ -1,3 +1,8 @@
+/*Page-wide styling*/
+body{
+    background-color: whitesmoke;
+}
+
 /*Styling for generator box*/
 .full-width{
     padding-left: 0px;
