trying something else for copying

--- a/3hw/style.css
+++ b/3hw/style.css
@@ -3,6 +3,11 @@ body{
     background-color: whitesmoke;
 }
 
+/*Hides input box*/
+#pW{
+    visibility: hidden;
+}
+
 /*Styling for generator box*/
 .full-width{
     padding-left: 0px;
