folder/files for 4hw

--- a/3hw/style.css
+++ b/3hw/style.css
@@ -9,6 +9,12 @@ body{
     padding-right: 0px;
     
 }
+
+input {
+    outline: none;
+    border: none;
+}
+
 .card-body{
     border-style: dashed;
     margin-top: 10px;
