page header now centered

--- a/4hw/style.css
+++ b/4hw/style.css
@@ -3,6 +3,10 @@ body{
     background-color: whitesmoke;
 }
 
+h1{
+    text-align: center;
+}
+
 /*Styling for Card Content*/
 li{
     padding-bottom: 5px;
