five day card text now white, more readable, added header over search input

--- a/6hw/style.css
+++ b/6hw/style.css
@@ -33,11 +33,16 @@
   padding-bottom: 10px;
 }
 
+.nav h5{
+  padding-left: 10px;
+}
+
 /*Central display*/
 
 .col-10 {
   padding-top: 19px;
   padding-left: 300px;
 }
+
 
 
