headers for forecast no longer accumulate. caught issue with method for checking most recent search-can either simply ls code or rearrange item in array

--- a/6hw/style.css
+++ b/6hw/style.css
@@ -1,6 +1,8 @@
 /*Header*/
 .brand{
   color: white;
+  padding-top: .75rem;
+  padding-bottom: .75rem;
 }
 
 /*Sidebar*/
@@ -9,7 +11,8 @@
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 65px 0 0; /* Height of navbar */
+  z-index: 100;
+  padding: 65px 0 0; 
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -25,7 +28,7 @@
   height: calc(100vh - 65px);
   padding-top: .5rem;
   overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  overflow-y: auto;
 }
 
 .input-group{
